<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bottomView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/home_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:textSize="25sp"
                android:layout_marginBottom="16dp"
                android:id="@+id/textNaam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naam" />

            <TextView
                android:textSize="25sp"
                android:layout_marginBottom="16dp"
                android:id="@+id/textAfstand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/afstand" />

            <Button
                android:textSize="25sp"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ga lekker slapen met je info" />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>